--- a/failure.html
+++ b/failure.html
@@ -1,9 +1,3 @@
-<?php
-session_start(); // Make sure to start the session at the beginning of your PHP file
-
-// Assuming you have stored the user's name in a session variable called 'user_name'
-$brukernavn = $_SESSION['username'];
-?>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,13 +11,15 @@ $brukernavn = $_SESSION['username'];
 
 <body>
   <div class="topnav">
-    <a class="active" href="Home.php">Home</a>
-    <a href="prossesor.php">komponentene</a>
-    <a href="skole.php">Skole</a>
-    <a href="begreper.php">Begreper</a>
-    <a href="FAQ.html">FAQ</a>
-    <a href="loginforphp.php">Log inn</a>
-    <a href="registration.php">Registrer</a>
+    <a href="Home.php" class="borderstyletag">Home</a>
+    <a href="prossesor.php" class="borderstyletag">komponentene</a>
+    <a href="skole.php" class="borderstyletag">Skole</a>
+    <a href="begreper.php" class="borderstyletag">Begreper</a>
+    <a href="FAQ.php" class="borderstyletag">FAQ</a>
+    <a href="saker.php" class="borderstyletag">Legg Ut Sak</a>
+    <a href="Items.php" class="borderstyletag">Kjøp!</a>
+    <a href="loginforphp.php" class="borderstyletag">Log inn</a>
+    <a href="registration.php" class="borderstyletag">Registrer</a>
     <div class="WelcomeuserContainer">
     </div>
   </div>
