--- a/videoguide.html
+++ b/videoguide.html
@@ -41,7 +41,7 @@ $brukernavn = $_SESSION['username'];
   <p class="ppp">Gjennomgang av websiden!</p>
   <div class="videoCenter">
     <video id="video" controls poster="play.jpg" onclick="this.play();">
-      <source src="images/websiteguide.mp4" type="video/mp4">
+      <source src="images/skolearsoppgavegjennomgangvidoprosjekt.mp4" type="video/mp4">
     </video>
   </div>
 
